[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/materials/programming-or-googling.jpg" type="Texture" id=1]
[ext_resource path="res://Menues/mainMenu/mainMenu.gd" type="Script" id=2]
[ext_resource path="res://Art/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 1
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 27
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -2.0
margin_right = -5.0
margin_bottom = -2.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
grow_vertical = 0
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = -330.0
margin_top = -405.0
margin_right = 330.0
margin_bottom = 405.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 90.0
rect_min_size = Vector2( 660, 90 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 2 )
tab_size = 18
text = "Spieleentwicklung-Projekt
Petr Zubarev und Ruben Miller"
fit_content_height = true

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 660.0
margin_bottom = 634.0
rect_min_size = Vector2( 660, 540 )
texture = ExtResource( 1 )
expand = true

[node name="Level1Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 638.0
margin_right = 660.0
margin_bottom = 678.0
rect_min_size = Vector2( 440, 40 )
custom_fonts/font = SubResource( 3 )
text = "Level 1"

[node name="Level2Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 682.0
margin_right = 660.0
margin_bottom = 722.0
rect_min_size = Vector2( 440, 40 )
custom_fonts/font = SubResource( 3 )
text = "Level 2"

[node name="Level3Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 726.0
margin_right = 660.0
margin_bottom = 766.0
rect_min_size = Vector2( 440, 40 )
custom_fonts/font = SubResource( 3 )
text = "Level 3"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 770.0
margin_right = 660.0
margin_bottom = 810.0
rect_min_size = Vector2( 440, 40 )
custom_fonts/font = SubResource( 4 )
text = "Exit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Level3Button" to="." method="_on_Level3Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
